<resources>
    <string name="app_name">MovieCatalogueUIUX</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="change_language_settings">Change Language</string>
    <string name="title_bar_1">Movies</string>
    <string name="title_bar_2">TV Show</string>
    <string name="title_bar_3">Favorite</string>
    <string name="tvt_overview">Overview</string>
    <string name="release">Release:</string>
    <string name="detail_movie">Movie Detail</string>
    <string name="detail_tv">TV Show Detail</string>
    <string name="cd_backdrop_movie">Backdrop Movie</string>
    <string name="cd_poster_movie">Poster Movie</string>
    <string name="cd_backdrop_tv">Backdrop TVShow</string>
    <string name="cd_poster_tv">Poster TVShow</string>
    <string name="detail" translatable="false">Detail</string>
    <string name="favorite" translatable="false">favorite</string>
    <string name="toast_failedtv">This TV Show already favorited</string>
    <string name="toast_failedmovie">This Movie already favorited</string>
    <string name="remove">Remove</string>
    <string name="toast_success">Added to favorite</string>

    <!-- TODO: Remove or change this placeholder text -->

</resources>
