<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.kharismarizqii.moviecatalogueuiux.fragment.MovieFragment"
        android:label="@string/title_bar_1"
        tools:layout="@layout/fragment_movie" />
    <fragment
        android:id="@+id/navigation_tv"
        android:name="com.kharismarizqii.moviecatalogueuiux.fragment.TVShowFragment"
        android:label="@string/title_bar_2"
        tools:layout="@layout/fragment_tvshow" />
    <fragment
        android:id="@+id/navigation_fav"
        android:name="com.kharismarizqii.moviecatalogueuiux.fragment.FavoriteFragment"
        android:label="@string/title_bar_3"
        tools:layout="@layout/fragment_favorite"/>
</navigation>