<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@android:color/white">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="visible"
            card_view:cardCornerRadius="8dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivm_poster"
                android:layout_width="match_parent"
                android:contentDescription="@string/cd_poster_movie"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/poster_aquaman" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvm_title"
            style="@style/TextTitle"
            android:layout_width="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/title_bar_1"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/cardView"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvm_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_star_24dp"
            tools:text="TextView"
            card_view:layout_constraintStart_toStartOf="@+id/tvm_title"
            card_view:layout_constraintTop_toBottomOf="@+id/tvm_title" />

        <Button
            android:id="@+id/btn_detail"
            style="@style/ButtonGeneral"
            android:text="@string/detail"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvket1left"
            style="@style/TextKeteranganLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvt_overview"
            card_view:layout_constraintStart_toStartOf="@+id/tvm_rating"
            card_view:layout_constraintTop_toBottomOf="@+id/tvm_rating" />

        <TextView
            android:id="@+id/tvm_overview"
            style="@style/TextKeteranganRight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:ellipsize="end"
            android:maxLines="3"
            tools:text="TextView"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/btn_detail"
            card_view:layout_constraintStart_toStartOf="@+id/tvket1left"
            card_view:layout_constraintTop_toBottomOf="@+id/tvket1left" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>